fix(menu): Add nowrap rule for Menu links

--- a/packages/default/scss/menu/_layout.scss
+++ b/packages/default/scss/menu/_layout.scss
@@ -28,6 +28,7 @@
             flex-direction: row;
             align-items: center;
             position: relative;
+            white-space: nowrap;
 
             .k-i-arrow-60-down {
                 margin-left: $icon-spacing;
